# impedance_gui

./: .gitignore  Cristian_Main.py  Impedance_Only.py  Try_2.py  Try_code.py  hello.py  main.py  main_010924.py  main_new.py  matlab (mohamed zuhair's conflicted copy 2024-10-14).mlx  matlab (mohamed zuhair's conflicted copy 2024-10-15).mlx  matlab.mlx  pyproject.toml
idea/: misc.xml  modules.xml  workspace (mohamed zuhair's conflicted copy 2024-11-13).xml
imp/: Filter.py  SGFilter.py  bpecg.py  reader.py
