[project]
name = "impedence-gui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cyclopts>=3.17.0",
    "matplotlib>=3.10.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pyqtgraph>=0.13.7",
    "pyside6>=6.9.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
]
